--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@ button.action:disabled{ opacity:.6; }
 
   function fmtSegment(seg){
     const s = fmtStamp(seg.start);
-    if (seg.end == null) return `${s}〜…（計測中）`;
-    return `${s}–${fmtStamp(seg.end)}`;
+    if (seg.end == null) return `${s} 〜 …（計測中）`;
+    return `${s} 〜 ${fmtStamp(seg.end)}`;
   }
 
   function currentElapsedMs(){
